styles: fixes item detail columns on mobile

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -30,6 +30,7 @@ $accent-dark:     #644906;
 /* viewport sizes */
 
 $max-width:       800px;
+$breakpoint-md: 768px;
 
 /* margins */
 
